fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -351,7 +351,7 @@ img{
     display: inline-block;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    margin-right: 0.25em;
+    margin-right: 0.5em;
 }
 
 #instagram::before{
@@ -360,7 +360,7 @@ img{
     display: inline-block;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    margin-right: 0.25em;
+    margin-right: 0.5em;
 }
 
 .info_reveal{
